syntax = "proto3";

package todo_list.v1;

import "resemble/v1alpha1/options.proto";

////////////////////////////////////////////////////////////////////////

service TodoList {
  option (resemble.v1alpha1.service).state = "TodoListState";

  rpc AddTodo(AddTodoRequest) returns (AddTodoResponse) {
    option (resemble.v1alpha1.method).writer = {
    };
  }

  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse) {
    option (resemble.v1alpha1.method).reader = {
    };
  }

  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse) {
    option (resemble.v1alpha1.method).writer = {
    };
  }

  rpc CompleteTodo(CompleteTodoRequest) returns (CompleteTodoResponse) {
    option (resemble.v1alpha1.method).writer = {
    };
  }

}

message Todo {
  string id = 1;
  string text = 2;
  bool complete = 3;
}

message CompleteTodoRequest {
  string id = 1;
}

message CompleteTodoResponse {}

message DeleteTodoRequest {
  string id = 1;
}

message DeleteTodoResponse {}

message TodoListState {
  repeated Todo todos = 1;
}

message AddTodoRequest {
  string todo = 1;
}

message AddTodoResponse {}

message ListTodosRequest {}

message ListTodosResponse {
  repeated Todo todos = 1;
}